# Meta2Data

./: .gitignore  CHANGELOG-BIOPROJECT.md  CLAUDE.MD  DEPENDENCIES.md  Dockerfile.iseq  MANIFEST.in  PRJCA004523.metadata.csv  README.md  env.yml  pyproject.toml  requirements_gsa.txt  requirements_metadl.txt  run_in_env.sh  setup.py
.claude/: settings.local.json
docs/: 1492R.fas  27F.fas  CNCB-DOWNLOAD-README.md  CONS_F.fas  CONS_R.fas  F.fa  GSA-BATCH-DOWNLOAD.md  GSA-DOWNLOAD-TOOLS.md  GSA-METADATA-DOWNLOAD.md  METADL-README.md  NCBI_Biosample.json  R.fa  UNIFIED-METADL-README.md  amplicon_pipeline.md  ecoli_16S_J01859.fasta  smart_trim_16s_README.md
recipe/: conda_build_config.yaml  meta.yaml
scripts/: AmpliconFunction.sh  AmpliconFunction_README.md  Amplicon_454_ClusterDenovo.sh  Amplicon_454_Deduplication.sh  Amplicon_Illumina_DenosingDeblur.sh  Amplicon_Illumina_PrimerDetectionAndQualityControl.sh  CleanBiosample.py  Common_SRADownloadToFastq_Common_SraToolkits.sh  __init__.py  bbduk_primer_detect.sh  check_dependencies.sh  dl_metadata_from_CNCB.py  entropy_primer_detect.py  fix_duplicate_filenames.sh  install_binaries.sh  metadata_downloader.py  multi-vsearch.sh  py_16s.py  run.sh  taxonomy.sh
test/: accession_numbers.txt  ampliconpiptest.csv  newpipe.csv
test1/: PRJDB12699_sra_runinfo.csv  PRJDB36956.processed.csv  PRJDB4237_sra_runinfo.csv  PRJEB38245.processed.csv  PRJEB45401_sra_runinfo.csv  PRJNA1007366_biosample.txt  PRJNA1010874.processed.csv  PRJNA1010874_sra_runinfo.csv  PRJNA1036403_sra_runinfo.csv  PRJNA1042938_sra_runinfo.csv  PRJNA1084867.processed.csv  PRJNA1084868.processed.csv  PRJNA1107702_biosample.txt  PRJNA1146331.processed.csv  PRJNA1203655_sra_runinfo.csv  PRJNA1221307_sra_runinfo.csv  PRJNA1229817_sra_runinfo.csv  PRJNA1232968.processed.csv  PRJNA1242897_sra_runinfo.csv  PRJNA1246220.processed.csv  PRJNA1248556_biosample.txt  PRJNA1248737_biosample.txt  PRJNA1253914_biosample.txt  PRJNA1285920.processed.csv  PRJNA1294982_sra_runinfo.csv  PRJNA1307180_sra_runinfo.csv  PRJNA222391_biosample.txt  PRJNA386324.processed.csv  PRJNA386324_sra_runinfo.csv  PRJNA578403.processed.csv  PRJNA578403_sra_runinfo.csv  PRJNA613243_sra_runinfo.csv  PRJNA678404_sra_runinfo.csv  PRJNA705676_sra_runinfo.csv  PRJNA715737_biosample.txt  PRJNA735522.processed.csv  PRJNA735927_sra_runinfo.csv  PRJNA742765_sra_runinfo.csv  PRJNA749807.processed.csv  PRJNA751106.processed.csv  (+24 more)
test2/: PRJDB12699_biosample.txt  PRJDB36956_biosample.txt  PRJEB23224_sra_runinfo.csv  PRJEB27223.processed.csv  PRJEB31610.processed.csv  PRJEB31847.processed.csv  PRJEB47378.processed.csv  PRJEB48765_sra_runinfo.csv  PRJEB48937.processed.csv  PRJEB48937_biosample.txt  PRJEB66205.processed.csv  PRJNA1006316_sra_runinfo.csv  PRJNA1007366.processed.csv  (+81 more)
(+846 files in other folders)
