[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Meta2Data"
version = "1.0.0"
description = "Bioinformatics pipeline for automated amplicon sequencing data processing from NCBI databases"
readme = "CLAUDE.MD"
requires-python = ">=3.10"
authors = [
    {name = "Meta2Data Contributors"}
]
# Meta2Data runs inside a QIIME2 conda environment which already provides
# all required Python packages. Declaring no mandatory dependencies avoids
# pip overwriting conda-managed versions (especially with --target installs).
dependencies = []

[project.optional-dependencies]
# Use `pip install Meta2Data[full]` for standalone installs outside QIIME2
full = [
    "biopython",
    "pandas",
    "openpyxl",
    "requests",
    "numpy>=1.26,<2",
    "biom-format",
]

[tool.setuptools]
# This is primarily a command-line tool package
# Files are included via MANIFEST.in
py-modules = []
packages = []
